--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-budget-total></app-budget-total>
 <app-insert-income></app-insert-income>
+<app-date></app-date>
+<app-all-income></app-all-income>
+<app-all-expenses></app-all-expenses>
