updated two components

--- a/src/app/Budget-component/Insert-income/income-insert.component.html
+++ b/src/app/Budget-component/Insert-income/income-insert.component.html
@@ -1,1 +1,16 @@
-<h2>This is the insert amount section</h2>
+<div class="container">
+    <form class = "enter-value">
+        <div class="form-row">
+            <div class="col-md-2">
+                <select id="inputState" class="form-control">
+                    <option selected>income</option>
+                    <option>expense</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <input type="text" class="form-control" placeholder="Enter the value">
+            </div>
+            <button class = "btn btn-primary click-button">Enter</button>
+        </div>
+    </form>
+</div>
