creating the main structure

--- a/src/app/Budget-component/Insert-income/income-insert.component.html
+++ b/src/app/Budget-component/Insert-income/income-insert.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class = "enter-value">
+    <form class="enter-value">
         <div class="form-row">
             <div class="col-md-2">
                 <select id="inputState" class="form-control">
@@ -7,10 +7,16 @@
                     <option>expense</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <input type="text" class="form-control" placeholder="Enter the value">
             </div>
-            <button class = "btn btn-primary click-button">Enter</button>
+            <div class="col-md-4">
+                <input type="text" class="form-control" placeholder="Enter the Description">
+            </div>
+            <div class="col-md-2">
+                <button class="btn btn-primary click-button">Enter</button>
+
+            </div>
         </div>
     </form>
 </div>
