--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,19 @@
 <app-budget-total></app-budget-total>
 <app-insert-income></app-insert-income>
-<app-date></app-date>
-<app-all-income></app-all-income>
-<app-all-expenses></app-all-expenses>
+<div class="container">
+    <div class="row">
+        <div class="col date-div">
+            <app-date></app-date>
+        </div>
+    </div>
+    <div class="row content-inc-exp">
+        <div class="col-sm-6 income">
+            <app-all-income></app-all-income>
+
+        </div>
+        <div class="col-sm-6 exp">
+            <app-all-expenses></app-all-expenses>
+
+        </div>
+    </div>
+</div>
