--- a/src/app/Budget-component/Insert-income/income-insert.component.html
+++ b/src/app/Budget-component/Insert-income/income-insert.component.html
@@ -2,7 +2,7 @@
     <form class="enter-value">
         <div class="form-row">
             <div class="col-md-2">
-                <select id="inputState" class="form-control">
+                <select id="inputState" class="form-control" #change0>
                     <option selected>income</option>
                     <option>expense</option>
                 </select>
@@ -14,7 +14,7 @@
                 <input type="text" class="form-control" placeholder="Enter the Description" #change2>
             </div>
             <div class="col-md-2">
-                <a (click) = "update(change1.value, change2.value)" class = "btn btn-primary click-button">Enter</a>
+                <a (click) = "update(change0.value, change1.value, change2.value)" class = "btn btn-primary click-button">Enter</a>
 
             </div>
         </div>
