--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,11 @@
     </div>
     <div class="row content-inc-exp">
         <div class="col-sm-6 income">
-            <app-all-income></app-all-income>
+            <app-display-income></app-display-income>
 
         </div>
         <div class="col-sm-6 exp">
-            <app-all-expenses></app-all-expenses>
+            <app-display-expenses></app-display-expenses>
 
         </div>
     </div>
