some updates to the logic of the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,10 @@
 <app-budget-total></app-budget-total>
 <app-insert-income></app-insert-income>
 <div class="container">
-    <div class="row">
-        <div class="col date-div">
-            <app-date></app-date>
-        </div>
+  <div class="row">
+    <div class="col date-div">
+      <app-date></app-date>
     </div>
-    <div class="row content-inc-exp">
-        <div class="col-sm-6 income">
-            <app-display-income></app-display-income>
-
-        </div>
-        <div class="col-sm-6 exp">
-            <app-display-expenses></app-display-expenses>
-
-        </div>
-    </div>
+  </div>
+    <app-display-section></app-display-section>
 </div>
