--- a/src/app/Budget-component/display-section/value/value.component.html
+++ b/src/app/Budget-component/display-section/value/value.component.html
@@ -1,1 +1,3 @@
-<p>{{ values.description + '  ' +  values.amount + '  ' + values.id + '  ' + values.type }}</p>
+<div class = "para-div">
+  <p *ngC>{{ values.description + '  ' +  values.amount + '  ' + values.id + '  ' + values.type }}</p>
+</div>
