--- a/src/app/Budget-component/display-section/value/value.component.html
+++ b/src/app/Budget-component/display-section/value/value.component.html
@@ -1,7 +1,7 @@
-<div class="card w-75">
+<div class="card w-75 card-margin">
   <div class="card-body">
     <p class="card-text">{{ 'Rs. ' + values.amount }}</p>
     <p class="card-text description">{{values.description}}</p>
-    <a href="#" [ngClass] = "selectClasses(values.type)">Button</a>
+    <a href="#" [ngClass] = "selectClasses(values.type)">Delete</a>
   </div>
 </div>
