--- a/src/app/Budget-component/Insert-income/income-insert.component.css
+++ b/src/app/Budget-component/Insert-income/income-insert.component.css
@@ -5,3 +5,13 @@
 .click-button{
     margin-left: 5%;
 }
+
+.invalid{
+  border: 1px solid red;
+}
+
+.form-control:focus {
+  border: 1px solid rgba(85, 85, 85, 0.62);
+  outline: 0;
+  box-shadow: none;
+}
