Routing added to the module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <app-budget-total></app-budget-total>
-<app-insert-income></app-insert-income>
 <div class="container">
   <div class="row">
     <div class="col date-div">
-      <app-date></app-date>
+      <router-outlet></router-outlet>
     </div>
   </div>
-  <app-display-section></app-display-section>
 </div>
 
