--- a/src/app/Budget-component/date-component/date.component.html
+++ b/src/app/Budget-component/date-component/date.component.html
@@ -1,1 +1,3 @@
+<app-insert-income></app-insert-income>
 <h3>{{ currentDate | date: 'yyyy / MMMM / dd'}}</h3>
+<app-display-section></app-display-section>
