--- a/src/app/Budget-component/display-section/value/value.component.html
+++ b/src/app/Budget-component/display-section/value/value.component.html
@@ -2,6 +2,6 @@
   <div class = "card-body">
     <p class="card-text">{{ 'Rs. ' + values.amount }}</p>
     <p class="card-text description">{{values.description}}</p>
-    <a href="#" [ngClass] = "selectClasses(values.type)" (click) = "deleteValue(values.id)">Delete</a>
+    <a [ngClass] = "selectClasses(values.type)" (click) = "deleteValue(values.id)">Delete</a>
   </div>
 </div>
