trying to add total to the database

--- a/src/app/Budget-component/Total/budget-total.component.html
+++ b/src/app/Budget-component/Total/budget-total.component.html
@@ -11,7 +11,7 @@
                 <h2 class="total-amount total-div">Total</h2>
             </div>
             <div class="col-sm-6 total-amount-div">
-                <h2 class="total-amount">Rs. {{total}}</h2>
+                <h2 class="total-amount">Rs. {{total.total}}</h2>
             </div>
         </div>
 
